# multi-agent-debate

./: .gitignore  BACKEND_IMPLEMENTATION_PLAN.md  CLAUDE.md  README.md  TODO.md
backend/: .env.example  API_DOCUMENTATION.md  ARCHITECTURE.md  MANUAL_TESTING.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml
backend/config/: personas.json
backend/core/: config.py  exceptions.py
backend/manual_tests/: README.md  test_2_agent_debate.py  test_3_agent_debate.py  test_5_agent_debate.py
backend/models/: __init__.py  agent.py  api.py  debate.py  judge.py  llm.py  message.py  persona.py  provider_catalog.py
backend/routers/: debates.py  personas.py  providers.py  websocket.py
backend/services/: agent_orchestrator.py  debate_manager.py  persona_service.py  prompt_builder.py  provider_catalog.py
backend/services/llm/: __init__.py  anthropic_client.py  base.py  factory.py  litellm_client.py  openai_client.py
backend/storage/: memory_store.py
backend/tests/: conftest.py  test_agent_orchestrator.py  test_api.py  test_config.py  test_debate_manager.py  test_edge_cases.py  test_integration_debate.py  test_litellm_client.py  test_llm_clients.py  test_memory_store.py  test_models.py  test_personas.py  test_prompt_builder.py
docs/: phase1-plan.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  debate-flow.spec.ts  persona-feature.spec.ts
frontend/e2e/helpers/: debate-helpers.ts  (+1 more)
frontend/src/: App.tsx  index.css
(+55 files in other folders)
